WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307062
Remote audio/video track IDs should not be derived from SDP
https://bugs.webkit.org/show_bug.cgi?id=307062
Summary
Remote audio/video track IDs should not be derived from SDP
youenn fablet
Reported
2026-02-05 05:48:42 PST
Remote audio/video track IDs should not be derived from SDP
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-05 05:48:58 PST
<
rdar://problem/169705644
>
youenn fablet
Comment 2
2026-02-05 05:51:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57959
EWS
Comment 3
2026-02-10 02:19:13 PST
Committed
307161@main
(9e4178b110f6): <
https://commits.webkit.org/307161@main
> Reviewed commits have been landed. Closing PR #57959 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug