Cherry-pick 9e4178b110f6. rdar://172689452

Remote audio/video track IDs should not be derived from SDP
    rdar://169705644
    https://bugs.webkit.org/show_bug.cgi?id=307062

    Reviewed by Eric Carlson.

    Align implementation with specification, in particular https://w3c.github.io/webrtc-pc/#dfn-create-an-rtcrtpreceiver,
    which states that track ID is generated by the user agent.

    Covered by rebased test.
    We update WebKit webrtc tests that were checking this property.

    Canonical link: https://commits.webkit.org/307161@main

Identifier: 305413.500@safari-7624-branch